--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,214 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>heroku-static</title>
-  </head>
-  <body>
-    <h1>heroku static</h1>
-    <p>Hello.</p>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>kernel panic cartoon</title>
+  <link href='http://fonts.googleapis.com/css?family=Roboto:400,400italic,700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/syntax.css">
+  <link rel="stylesheet" href="css/solo.css">
+
+</head>
+<body>
+  <div class="container">
+    <h1><a href="./">kernel panic cartoon / shuhei kinukawa</a></h1>
+    
+<hr>
+
+<p>kernel panic<br>
+cartoon /<br>
+shuhei<br>
+kinukawa  </p>
+
+<h2>About</h2>
+
+<ul>
+<li>ジャズ、即興、エレクトロニカなどをつまみ食いするベーシスト。</li>
+<li>映像作品の作曲、編集、ミックスもやっています。</li>
+<li>ビデオカメラとマイク持ちだして、
+映像がわかる音響エンジニアとしても活動しています。</li>
+<li>Shimane-&gt;Hyogo&lt;-&gt;Tokyo, Japan</li>
+</ul>
+
+<h3>Identifications</h3>
+
+<ul>
+<li>twitter: <a href="http://twitter.com/kinushu">@kinushu</a></li>
+<li>blog: <a href="http://d.kpctoon.com/">http://d.kpctoon.com/</a></li>
+<li>soundcloud: <a href="https://soundcloud.com/kinushu/">kinushu</a></li>
+<li>youtube: <a href="http://www.youtube.com/user/kinushu/videos">kinushu</a></li>
+<li>USTREAM:<a href="http://www.ustream.tv/channel/topophiria-live">topophiria-live</a></li>
+<li>instagram: <a href="http://instagram.com/kinushu">kinushu</a></li>
+<li>flickr: <a href="http://www.flickr.com/photos/kinushu/">kinushu</a></li>
+<li>github: <a href="https://github.com/kinushu">github.com/kinushu</a></li>
+</ul>
+
+<h3>Equipments</h3>
+
+<ul>
+<li>PGM 5string(Low-B) fretless electric bass, ARIA SWB-04</li>
+<li>Ableton Live, Avid Pro tools, Presonus Studio One</li>
+<li>Final Cut Pro X, Canon G10, Roland VR-1</li>
+<li>USTREAM, CamTwist, Soundflower... </li>
+<li>C++, Ruby...</li>
+</ul>
+
+<hr>
+
+<h2>Works</h2>
+
+<h3>Music</h3>
+
+<h4><a href="http://vabune.com/">Spaghetti Vabune!</a></h4>
+
+<p><section id="desc"></p>
+
+<ul>
+<li>Regular support bassist (2010-)</li>
+<li>Recording <a href="https://soundcloud.com/vabune/ivy">&#39;Demo Songs; Ivy&#39; - &#39;ivy&#39;,&#39;放課後エイリアン&#39;</a>　</li>
+</ul>
+
+<p></section></p>
+
+<p><section id="content">
+<a href="http://www.flickr.com/photos/kinushu/12265233734/" title="rough3 by kinushu, on Flickr"><img src="http://farm8.staticflickr.com/7452/12265233734_ae6e6e418c.jpg" width="200" height="200" alt="rough3"></a></p>
+
+<iframe frameborder="0" height="200" src="http://www.youtube.com/embed/zEDqsq-lWQg" width="356"></iframe>   
+
+<p></section></p>
+
+<h4>moire(もあれ)</h4>
+
+<p><section id="desc"></p>
+
+<ul>
+<li>My electric jazz band</li>
+<li>Member
+
+<ul>
+<li>Jin Kirimura(guitars,compose)</li>
+<li>Shuhei Kinukawa(@kinushu)(bass)</li>
+<li>Yu Ito(@yk2skt)(drums)</li>
+<li>and guest players..</li>
+</ul></li>
+</ul>
+
+<p></section></p>
+
+<p><section id="content">
+<iframe frameborder="0" height="200" src="http://www.youtube.com/embed/GmVDxWqfQDg" width="356">
+</iframe>
+</section></p>
+
+<h4><a href="http://enjyaqu.main.jp/">Sakaguchi Mitsuhisa『ARCHITECNICA』(2010)</a></h4>
+
+<ul>
+<li>Keyboardist Sakaguchi Mitsuhisa(坂口光央) &#39;s solo overdub compositions</li>
+<li>Recording, Mixing engineer</li>
+</ul>
+
+<p><img src="http://media.tumblr.com/tumblr_lsypaqtNMX1qjsa49.jpg"/ height="200"></p>
+
+<p><a href="http://www.amazon.co.jp/ARCHITECNICA-%E5%9D%82%E5%8F%A3%E5%85%89%E5%A4%AE/dp/B007ODXXIC">Amazon</a></p>
+
+<h4><a href="http://sierraleone.jp/">Sierra Leone(シエラレオネ)</a></h4>
+
+<ul>
+<li>Recording bassist (Album &#39;Nothing but a man&#39;)</li>
+</ul>
+
+<p><img src="http://media.tumblr.com/tumblr_lsypfvkzwE1qjsa49.jpg"/ height="200"></p>
+
+<h4>Other music work</h4>
+
+<p><a href="http://soundcloud.com/kinushu/">http://soundcloud.com/kinushu/</a></p>
+
+<iframe width="560" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/2890942&amp;color=bd6f3a&amp;auto_play=false&amp;show_artwork=false"></iframe>
+
+<h3>Movie</h3>
+
+<h4>TOPOPHIRIA TOKYO(Video Production Team)</h4>
+
+<ul>
+<li>Sound Mixing, Editing, Music Composition, Effect...</li>
+</ul>
+
+<h5>幻想の都市(2012)</h5>
+
+<iframe width="560" height="315" src="http://www.youtube.com/embed/swq_qTM0ptg" frameborder="0" allowfullscreen></iframe>
+
+<h5>「カレは死んでいる。」(2009)</h5>
+
+<iframe width="420" height="315" src="http://www.youtube.com/embed/Q3TwH26-UQU" frameborder="0" allowfullscreen></iframe>
+
+<h5>Firefly(蛍) (2008)</h5>
+
+<iframe width="560" height="315" src="http://www.youtube.com/embed/1uo8crulYjo" frameborder="0" allowfullscreen></iframe>
+
+<h3>Video Streaming</h3>
+
+<ul>
+<li>ライブ、イベントの出張USTREAM配信やっています。</li>
+<li>カメラ、スイッチャ、モバイルネット回線持って行きます。</li>
+</ul>
+
+<h4><a href="http://kosukenaito.com/tonight/">Tonight is the NAITO (2011-)</a></h4>
+
+<ul>
+<li>神戸のドラマー/パーカッショニスト内藤皓介が、全バンド出演する耐久戦イベント（転換中のMCも）</li>
+<li>毎年撮影、UST配信担当</li>
+</ul>
+
+<iframe frameborder="0" height="270" scrolling="no" src="http://www.ustream.tv/embed/recorded/15908959" width="480"></iframe> 
+ 
+
+<h4>Jazzのライブなども配信しています</h4>
+
+<iframe frameborder="0" height="270" scrolling="no" src="http://www.ustream.tv/embed/recorded/17497229" width="480"></iframe>
+
+<iframe frameborder="0" height="270" scrolling="no" src="http://www.ustream.tv/embed/recorded/8210287" width="480"></iframe>
+
+<h3>Video Editing</h3>
+
+<h4><a href="http://vabune.com/">Spaghetti Vabune!</a></h4>
+
+<ul>
+<li>ライブ映像の収録、編集担当</li>
+<li>ライブ告知のビデオ編集も。</li>
+</ul>
+
+<iframe width="560" height="315" src="http://www.youtube.com/embed/pKOTR6a1zoA" frameborder="0" allowfullscreen></iframe>
+
+<h4><a href="http://ikubunnotane.jimdo.com/">郁文の種</a></h4>
+
+<ul>
+<li>島根県松江市でのイベント主催</li>
+<li>撮影、録音、編集を担当</li>
+</ul>
+
+<h5>郁文の種vol.1 大友良英/浜田真理子</h5>
+
+<iframe width="560" height="315" src="http://www.youtube.com/embed/PQYvLCvtbew" frameborder="0" allowfullscreen></iframe>
+
+<h5>郁文の種vol.3 因幡修次</h5>
+
+<iframe width="420" height="315" src="http://www.youtube.com/embed/nlNAXLZ3WX8" frameborder="0" allowfullscreen></iframe>
+
+<h4><a href="http://schoolmariko.com/">スクールMARIKO</a></h4>
+
+<ul>
+<li>撮影、録音、編集を担当</li>
+</ul>
+
+<h4><a href="http://2012.osaka.wordcamp.org/timetable/">WordCamp Osaka 2012</a></h4>
+
+<ul>
+<li>撮影、録音、編集を担当</li>
+</ul>
+
+  </div>
+
+</body>
 </html>
